[package]
name = "rusty-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = {version = "0.28.1", features = ["unstable-widget-ref"] }
windows = {version = "0.58.0",  features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory"] }
argon2 = { version = "0.5.3", features = ["std"] }
secrecy = "0.10.3"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
rand = "0.8.5"
